# migrave_person_state_estimation

./: CMakeLists.txt  README.md  package.xml  setup.py
common/src/migrave_person_state_estimation/: person_state_estimation.py
ros/config/: person_state_estimation_config.yaml  person_state_estimation_config_down.yaml  person_state_estimation_config_up.yaml
ros/launch/: person_state_estimation.launch
ros/scripts/: person_state_estimation  person_state_estimator  person_state_merger
ros/src/migrave_person_state_estimation_wrapper/: person_state_estimation_wrapper.py  utils.py
